--- a/html/login/templates/logintemplate.html
+++ b/html/login/templates/logintemplate.html
@@ -1,3 +1,4 @@
+<div class="template-container">
 <div id="logincontainer">
 <form action="/user/login" method="post" accept-charset="utf-8">
 <label for="username">Username</label><input type="text" name="username" value="teset" />
@@ -7,5 +8,6 @@
 
 <input type="submit" name="login" value="Login" /></form>
 <p>Or <a id= "signup" href="#">create a new account</a></p>
+</div>
 </div>
 </div>
