--- a/html/css/app.css
+++ b/html/css/app.css
@@ -927,10 +927,10 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#84a934', end
 /********************ADD GAME POP UP CSS**************************************/
 .container_add_game{
 	font-size:12px ;
-	background-color: #FFF;
+	/*background-color: #FFF;
 	width: 96%;
 	padding: 0 20px 10px;
-	float: left;
+	float: left;*/
 }
 .container_add_game select {
 	background-color: #6B6F72;	
@@ -949,11 +949,12 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#84a934', end
 
 .container_add_game input[type="text"].txt-score-team_h {
 	width:25px;
-	
+	margin-bottom: 0;	
 }
 .container_add_game .section-game-radio_h {
-	margin-left:10px;
+	/*margin-left:10px;*/
 	padding:4px 0 0 0;
+	margin-top: 5px;
 	
 }
 .container_add_game .section-new-team_h{clear:both} 
@@ -965,6 +966,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#84a934', end
 .container_add_game .section-game-teams_h{
     float: left;
     width: 100%;
+    margin: 10px 0;
    }
 .container_add_game .field-message{
 	color:#77011C;
@@ -978,19 +980,70 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#84a934', end
 	margin: 8px -20px;
 	padding: 4px 15px;
 }
-.container_add_game input[type="radio"],.container_add_game input[type="checkbox"] {
+.container_add_game input[type="radio"],
+.container_add_game input[type="checkbox"] {
     margin: 0;
 }
- .container_add_game .ul.ui-autocomplete{
- 	 padding: 0 2px !important;
- 	
- }
-.container_add_game .ui-autocomplete li.ui-menu-item{
-	font-size: 14px;
-.score-box a {
+
+.container_add_game .score-box a {
 	width: 100%;
 	height: 100%;
 	display: inline-block;
+}
+.container_add_game input.txtDate{
+width: 90px;	
+float:left;
+}
+.container_add_game input.txtTime{
+	float:left;
+	width:40px;
+	margin-left: 4px;
+    margin-right: 4px;
+}
+.container_add_game .ddlTime{
+	width:50px;
+	float:left;
+	margin-left:8px;
+}
+
+.container_add_game .section-score_h{
+	margin-top: 4px;
+    padding: 4px 0 0;
+}
+.container_add_game .dropdown-container {
+	z-index: 0;
+	width:98%
+}
+
+
+.container_add_game .dropdown-wrapper{
+	width:224px;
+}
+.container_add_game [class*="span"] {
+	margin-left: 0px;
+	
+}
+
+.container_add_game .span_ddl_team_h{
+	margin-bottom: 14px;height: 15px;
+}
+.container_add_game .spn-ddl-time-period_h .region-dark{
+	padding: 4px 1%;
+}
+
+.container_add_game .spn-ddl-time-period_h .dropdown-wrapper{
+	width:60px;
+}
+.container_add_game .spn-ddl-time-period_h .drop-down-outer{
+	height: 28px;
+}
+
+.container_add_game .secction-individual-game_h{
+margin-top:10px;	
+}
+
+.ui-datepicker{
+	z-index: 5000 !important;
 }
 
 
@@ -1008,3 +1061,4 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#84a934', end
 	opacity: 0.5 !important;
 	pointer-events: none !important;
 }
+
