--- a/html/packages/site/templates/comment-item.html
+++ b/html/packages/site/templates/comment-item.html
@@ -2,14 +2,18 @@
 {{#payload}}
 <div class="row-fluid" data-id="bbbbbbbb">
     <div class="user-photo">
-    	<img src="{{base_url}}{{poster_picture}}" alt="{{poster}}" />
+    	<a href="#profile/{{user.id}}" title="{{user.name}}">
+    		<img src="{{base_url}}{{poster_picture}}" alt="{{poster}}" />
+    		<span>{{user.name}}</span>
+    	</a>
     </div>
     
     <div>
 	    <div class="bubble">  
 		<div class="pointer"></div>
 	        <div class="content">
-	        	<span class="comment-date">{{poster}} {{comment_date}}</span>
+	        	
+	        	<span class="comment-date"><a href="#profile/{{user.id}}" title="{{user.name}}">{{user.name}}</a>  {{poster}} {{comment_date}}</span>
 	        	<p class="comment-text">{{comment}}</p>
 	        </div>
 	    </div>
