--- a/html/usercontrols/addgame/templates/layout.html
+++ b/html/usercontrols/addgame/templates/layout.html
@@ -5,7 +5,7 @@
 	<div class="section-Add-Sports_h">
 		<div class="section-game-date_h floatLeft">
 			<input type="text" class="txt-game-date_h txtDate" placeholder="Enter Date" readonly="readonly" />
-			<input type="text" class="txt-game-time_h hasDatepicker txtTime"  placeholder="Time" placeholder="Time" />
+			<input type="text" class="txt-game-time_h hasDatepicker txtTime"  placeholder="Time" placeholder="Time" maxlength="5" />
 			
 			<span class="spn-ddl-time-period_h"></span>
 			<!-- <select class="ddl-time-period_h ddlTime">
