--- a/html/css/app.css
+++ b/html/css/app.css
@@ -1057,6 +1057,13 @@ float:left;
 .container_add_game .span_ddl_team_h{
 	margin-bottom: 14px;height: 15px;
 }
+.container_add_game .span_ddl_team_h .dropdown-wrapper{
+	width:500px;
+} 
+
+.container_add_game .section-new-team_h input[type="text"]{
+	width:480px;
+}
 .container_add_game .spn-ddl-time-period_h .region-dark{
 	padding: 4px 1%;
 }
