--- a/html/usercontrols/addgame/templates/layout.html
+++ b/html/usercontrols/addgame/templates/layout.html
@@ -1,4 +1,4 @@
-<div class="well well-large container_add_game">
+<div class="well-large container_add_game">
 	<!-- <h4>Add Game</h4> -->
 	<!-- <div class="green-left-heading ">DATE</div> -->
 <div class="clear"></div>
