--- a/html/css/bootstrap.css
+++ b/html/css/bootstrap.css
@@ -5179,7 +5179,7 @@ input[type="submit"].btn.btn-mini {
   bottom: 0;
   left: 0;
   z-index: 1040;
-  background-color: #000000;
+  background-color: #000;
 }
 
 .modal-backdrop.fade {
@@ -5188,31 +5188,32 @@ input[type="submit"].btn.btn-mini {
 
 .modal-backdrop,
 .modal-backdrop.fade.in {
-  opacity: 0.8;
-  filter: alpha(opacity=80);
+  opacity: 0.6;
+  filter: alpha(opacity=60);
 }
 
 .modal {
   position: fixed;
   top: 10%;
-  left: 50%;
+  left: 5%;
   z-index: 1050;
-  width: 560px;
-  margin-left: -280px;
+  width: 90%;
   background-color: #ffffff;
-  border: 1px solid #999;
-  border: 1px solid rgba(0, 0, 0, 0.3);
-  *border: 1px solid #999;
-  -webkit-border-radius: 6px;
-     -moz-border-radius: 6px;
-          border-radius: 6px;
+
+  border: 15px solid #eaedf2;
+  *border: 15px solid #eaedf2;
+  -webkit-border-radius: 0;
+     -moz-border-radius: 0;
+          border-radius: 0;
   outline: none;
-  -webkit-box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
-     -moz-box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
-          box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
+  -webkit-box-shadow: 0;
+     -moz-box-shadow: 0;
+          box-shadow: 0;
   -webkit-background-clip: padding-box;
      -moz-background-clip: padding-box;
           background-clip: padding-box;
+    padding:10px;
+    margin-left: -25px;
 }
 
 .modal.fade {
@@ -5229,7 +5230,6 @@ input[type="submit"].btn.btn-mini {
 
 .modal-header {
   padding: 9px 15px;
-  border-bottom: 1px solid #eee;
 }
 
 .modal-header .close {
@@ -5243,7 +5243,8 @@ input[type="submit"].btn.btn-mini {
 
 .modal-body {
   position: relative;
-  max-height: 400px;
+  max-height: 85%;
+    min-height: 85%;
   padding: 15px;
   overflow-y: auto;
 }
@@ -5253,18 +5254,12 @@ input[type="submit"].btn.btn-mini {
 }
 
 .modal-footer {
-  padding: 14px 15px 15px;
-  margin-bottom: 0;
-  text-align: right;
-  background-color: #f5f5f5;
-  border-top: 1px solid #ddd;
-  -webkit-border-radius: 0 0 6px 6px;
-     -moz-border-radius: 0 0 6px 6px;
-          border-radius: 0 0 6px 6px;
-  *zoom: 1;
-  -webkit-box-shadow: inset 0 1px 0 #ffffff;
-     -moz-box-shadow: inset 0 1px 0 #ffffff;
-          box-shadow: inset 0 1px 0 #ffffff;
+    padding: 14px 15px 15px;
+    margin-bottom: 0;
+    position:absolute;
+    bottom: 0;
+    width:95%;
+    text-align: right;
 }
 
 .modal-footer:before,
