REGULAR EXPRESSION FOR WHOLE NUMBERS MOVEED NO TEAM FOUND OPTION IN DROPDOWN SHOM LISTING OF ALL SPORTS INSTEAD OF USERS SPORTS

--- a/html/css/app.css
+++ b/html/css/app.css
@@ -1057,6 +1057,9 @@ float:left;
 .container_add_game .span_ddl_team_h{
 	margin-bottom: 14px;height: 15px;
 }
+.container_add_game .btn-new-team-game_h{
+	display:none !important;
+}
 .container_add_game .span_ddl_team_h .dropdown-wrapper{
 	width:500px;
 } 
@@ -1074,6 +1077,7 @@ float:left;
 .container_add_game .spn-ddl-time-period_h .drop-down-outer{
 	height: 28px;
 }
+
 
 .container_add_game .secction-individual-game_h{
 margin-top:10px;	
