--- a/html/pages/game/templates/header.html
+++ b/html/pages/game/templates/header.html
@@ -49,7 +49,7 @@
 					<a href="javascript: void(0);" title="edit score" class="edit-score-h">
 						<span>{{points_scored}}</span>
 					</a>
-					<input type="hidden" value="{{points_scored}}" data-id="{{id}}" class="edit-score-input-h input-mini" />
+					<input type="hidden" value="{{points_scored}}" data-id="{{games_teams_link_id}}" class="edit-score-input-h input-mini" />
 				</div>
 				<div class="org-info">
 					<span class="org-name">
