--- a/html/pages/home/templates/menu.html
+++ b/html/pages/home/templates/menu.html
@@ -3,8 +3,8 @@
 	</div>	
 <div class="menu-outer-h">
 <div id="views" class="menu span2">
-	<a href="javascript:void(0)" class="menu-link-h"> VIEWS <span class="caret"></span></a>
-	<div class="dd menu-detail-h reset-view-area-h">
+	<a href="javascript:void(0)" class="menu-link-h view-link-h"> <span class="option-heading-h">VIEWS</span> <span class="caret"></span></a>
+	<div class="dd menu-detail-h reset-view-area-h view-options-h">
 		<a href="javascript: void(0);" class="btn views-reset-btn-h">Reset</a>
 		
 		<div class="dropdown">
@@ -30,9 +30,9 @@
 </div>
 
 <div id="sport" class="menu span2">
-	<a href="javascript:void(0)" class="menu-link-h"> SPORT <span class="caret"></span>
+	<a href="javascript:void(0)" class="menu-link-h sport-link-h"> <span class="option-heading-h">SPORT</span> <span class="caret"></span>
 	</a>
-	<div class="dd menu-detail-h reset-sport-area-h">
+	<div class="dd menu-detail-h reset-sport-area-h sports-option-h">
 		<a href="javascript: void(0);" class="btn sport-reset-btn-h">Reset</a>
 		<div class="left text-center">
 			<strong>Guys</strong>
@@ -49,7 +49,7 @@
 	</div>
 </div>
 <div id="location" class="menu span2">
-	<a href="javascript:void(0)"  class="menu-link-h"> LOCATION <span class="caret"></span></a>
+	<a href="javascript:void(0)"  class="menu-link-h location-link-h"> <span class="option-heading-h">LOCATION</span> <span class="caret"></span></a>
 	<div class="dd menu-detail-h reset-location-area-h">
 		<a href="javascript: void(0);" class="btn location-reset-btn-h">Reset</a>
 		<!--div class="state"></div-->
@@ -59,7 +59,7 @@
 <div class="span5">
 	<div class="pull-left m-r-10">SEARCH</div>
 	<div class="pull-left">
-		<input type="text" id="search"></input>
+		<input type="text" id="search" />
 	</div>
 	<div class="pull-left">
 		<a id="video" class="searchBtn" data-number="0" href="javascript:void(0)"><i class="icon-facetime-video"></i></a>
