--- a/html/pages/imageup/templates/basic.html
+++ b/html/pages/imageup/templates/basic.html
@@ -14,9 +14,8 @@
 		<h3 id="label">Image Uploader</h3>
 	</div>
 
-	<div class="side-panel">
-		<div id="main-content-img"></div>
-		<div id="image-tagging"></div>
+	<div class="side-panel" id="left_upload">
+		
 	</div>
 
 	<div class="main-body">
