--- a/html/pages/imageup/templates/uploader.html
+++ b/html/pages/imageup/templates/uploader.html
@@ -1,7 +1,15 @@
-
+<div id="main-content-img">
 	<div id="imageholder" class="imageholder">Drag & Drop</div>
 	<div align="center"><input type="file" id="image_file" class="files" name="image_file[]" multiple=""></div>
 	<div class="modal-footer">
 		<button class="btn fileuploader btn-primary" id="imageup" type="button">Upload and Finish</button>
 	</div>
-	
+</div>
+<div>
+		<div id="image-tagging" class="displayNone">
+			
+		</div>
+		<div id="select-allup">
+			
+		</div>	
+</div>
