--- a/html/css/app.css
+++ b/html/css/app.css
@@ -127,7 +127,7 @@ header .signup-facebook, header .signup-email {
 #main .video {
 	float: left;
 }
-#main .user-photo img {
+#main .user-photo img,#main .user-photo a img{
 	width: 45px;
 	margin-top: 10px;
 	margin-right: 10px;
@@ -591,10 +591,12 @@ margin-right: 100px;
 	line-height: 12px;
 }
 
-.comment .user-photo img {
+.comment .user-photo img, .comment .user-photo a img{
     width:100% !important;
     height: 100%;
     margin-top:5px !important;
+    top:20px;
+    position: relative;
 }
 
 .add-comment-form-h{
@@ -1128,7 +1130,7 @@ margin-top:10px;
 }
 
 .disable-arrow-link {
-	opacity: 0.5;
+	opacity: 0.1;
 	pointer-events: none;
 }
 
