--- a/html_build/css/app.css
+++ b/html_build/css/app.css
@@ -120,7 +120,7 @@ header .signup-facebook, header .signup-email {
 #main .video {
 	float: left;
 }
-#main .user-photo img {
+#main .user-photo img,#main .user-photo a img{
 	width: 45px;
 	margin-top: 10px;
 	margin-right: 10px;
@@ -409,7 +409,7 @@ ul.ui-autocomplete {
 }
 .ui-autocomplete li.ui-menu-item a {
 	padding: 5px 0 5px 15px !important;
-	border-radius: none;
+	border-radius: 0;
 }
 span.ui-helper-hidden-accessible {
 	display: none;
@@ -471,10 +471,12 @@ margin-right: 100px;
 	font-size: 10px;
 	line-height: 12px;
 }
-.comment .user-photo img {
+.comment .user-photo img, .comment .user-photo a img{
     width:100% !important;
     height: 100%;
     margin-top:5px !important;
+    top:20px;
+    position: relative;
 }
 .add-comment-form-h{
     width: 100%;
@@ -487,7 +489,10 @@ margin-right: 100px;
 }
 .team-template-outer .profile-heading {
 	background: #4b3dc6;
-	
+	color:#FFF;
+}
+.team-template-outer .profile-heading *{
+    color:#fff;
 }
 .profile-heading {
 	background: #9cca3c;
@@ -793,7 +798,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#84a934', end
 	font-size: 12px;
 	font-style: italic;
 	font-weight: normal;
-	background-color: none;	
+	background-color: transparent;
 	float:left;
 }
 .container_add_game .green-left-heading{
@@ -867,11 +872,26 @@ float:left;
 .container_add_game .spn-ddl-time-period_h .drop-down-outer{
 	height: 28px;
 }
-.container_add_game .secction-individual-game_h{
+.container_add_game .section-individual-game_h{
 margin-top:10px;	
 }
 .ui-datepicker{
 	z-index: 5000 !important;
+}
+.container_add_game .indicator_h{
+	height:16px;width:16px; display: inline-block;  margin-left: 4px; 
+}
+.valid{
+	background : url(images/validS.png) no-repeat;
+}
+.invalid{
+	background : url(images/invalidS.png) no-repeat;
+}
+.image-tagging .div_select_all {
+	height:100%;
+}
+.image-tagging .center{
+	
 }
 #map-canvas {
 	width: 80%;
@@ -882,6 +902,10 @@ margin-top:10px;
 	opacity: 0.5 !important;
 	pointer-events: none !important;
 }
+.disable-arrow-link {
+	opacity: 0.1;
+	pointer-events: none;
+}
 #logincontainer{
     margin: auto;
 }
@@ -891,4 +915,20 @@ margin-top:10px;
 }
 #regcontainer *{
     font-family: "HelveticaNeue", "Helvetica";
+}
+#imgpreview .selected{
+	border:2px solid #954121;
+}
+.search-result-outer {
+}
+.home-page-arrow {
+	position: absolute;
+}
+.left-arrow-page {
+	left: 0;
+	margin-top: 30%;
+}
+.right-arrow-page {
+	right: 0;
+	margin-top: 30%;
 }
