--- a/html_build/pages/home/templates/layout.html
+++ b/html_build/pages/home/templates/layout.html
@@ -8,7 +8,15 @@
 		<div id="top-rated" class="p-l-20 clearfix clear"></div>
 
 		<div id="menu" class="p-l-20 clear"></div>
-		<div id="search-result" class="p-l-20 clear"></div>
+		<div class="search-result-outer">
+			<div id="search-result" class="p-l-20 clear"></div>
+			<a href="javascript: void(0);" class="left-arrow-page home-page-arrow left-arrow-page-h">
+				<img src="http://cdn.athletez.com/resources/img/left_arrow.png">
+			</a>
+			<a href="javascript: void(0);" class="right-arrow-page home-page-arrow right-arrow-page-h">
+				<img src="http://cdn.athletez.com/resources/img/right_arrow.png">
+			</a>
+		</div>
 	</div>
 	<div id="main-footer"></div>
 </div>
