--- a/html_build/usercontrols/addgame/templates/layout.html
+++ b/html_build/usercontrols/addgame/templates/layout.html
@@ -44,6 +44,7 @@
 			<!-- <input type="text" class="txt-game-state_h" placeholder="Enter State" />
 			<input type="text" class="txt-game-city_h displayNone" placeholder="Enter City" /> -->
 			<input type="text"class="txt txt-game-team_h displayNone" placeholder="Enter Team" />
+			<span class="indicator_h"></span>
 			<!-- <a href="javascript:void(0)" class="btn-ddl-team-game_h">Choose from select ?</a> -->
 		</div>
 			<div class="clear"></div>
@@ -59,8 +60,9 @@
 		</div>
 	</div>
 <div class="clear"></div>
-	<div class="secction-individual-game_h displayNone">
+	<div class="section-individual-game_h displayNone">
 		<input type="text"class="txt-individual-game_h" placeholder="Enter Game" />
+		<span class="indicator_h"></span>
 		<div class="clear"></div>
 		<input type="text"class="txt-individual-location_h displayNone" placeholder="Enter Location Id"  />
 			<div class="clear"></div>
@@ -86,6 +88,7 @@
 			<!-- <input type="text" class="txt-game-state_h" placeholder="Enter State" />
 			<input type="text" class="txt-game-city_h displayNone" placeholder="Enter City" /> -->
 			<input type="text"class="txt-game-team_h displayNone" placeholder="Enter Team" />
+			<span class="indicator_h"></span>
 		</div>
 			<div class="clear"></div>
 		<span class="displayNone field-message field-message_h"></span>
