--- a/html/pages/profile/templates/sports.html
+++ b/html/pages/profile/templates/sports.html
@@ -1,3 +1,3 @@
 {{#payload}}
-    <img src="{{large_icon}}" class="sports-icon-h" data-id="{{id}}" />
+    <img src="{{large_icon}}" class="sports-icon-h" data-name="{{sport_name}}" data-id="{{id}}" />
 {{/payload}}
