Working on merging the profile schedule and team schedule to use the same code.

--- a/html/css/app.css
+++ b/html/css/app.css
@@ -747,7 +747,7 @@ margin-right: 100px;
     background-color: #e0e0e0;
     border-radius: 40px;
     width: 85%;
-    padding: 20px 25px;
+    padding: 20px 25px 10px 10px;
     margin: 0px 5% 48px 5%;
 }
 
