--- a/html/packages/sportorg/templates/org-item.html
+++ b/html/packages/sportorg/templates/org-item.html
@@ -1,43 +1,9 @@
 {{#payload}}
 
 
-<div class="select-team">
+<div class="select-team" id="team-list-div">
 	
-			{{#teams}}
-			
-		<div class="org-name">
-			<span class="team-label">{{org_name}} | {{complevel}} | {{season}} {{year}}</span>
-			{{^schedules}}
-				<span>&nbsp;(No games on the docket)</span>
-			{{/schedules}}<a href="javascript: void(0);" data-team-id="{{team_id}}" data-sport-id="0" title="add game" class="add-game-h">Add Game</a>
-		</div>
 
 
-			
-			
-			<div class="game-box-outer">
-		<ul>
-			
-				{{#schedules}}
-				<li>
-				<a href="javascript: void(0);" class="win team-info-h">
-					
-						<div class="org-popup hide">
-							<ul>
-							{{#teams}}
-								<li>{{gameDay}} | VS. {{team_name}} | Home | W 2-1</li>
-							{{/teams}}
-							</ul>
-						</div>
-				</a>
-				</li>
-				{{/schedules}}
-				
-			
-			</ul>
-	</div>
-			{{/teams}}
-
-</div>
 </div>
 {{/payload}}
