--- a/html/packages/sportorg/templates/team-list.html
+++ b/html/packages/sportorg/templates/team-list.html
@@ -1,15 +1,1 @@
-{{#data}}
-<div class="select-team">
-	<div class="game-box-outer">
-		<ul class="team-list-h">
-			
-		</ul>
-	</div>
-</div>
-</div>
-{{/data}}
-{{^data}}
-<div class="info">	
-	No games on the docket.  <a href="javascript: void(0);" title="add game" class="add-game-h">Click here to Add Game.</a>
-</div>
-{{/data}}
+<div></div>
