--- a/html/usercontrols/add-club/templates/layout.html
+++ b/html/usercontrols/add-club/templates/layout.html
@@ -1,12 +1,14 @@
-<div>
+<div class="add-club-school-outer">
 	<div class="name-outer">
 		<label>Name</label>
 		<input type="text" class="name-h" class="name" placeholder="Please enter name." />
 	</div>
 	<div class="club-season-profile">
+		<label>Which of these most closely matches the seasons that your club competes?</label>
 		<div class="profile-h"></div>
 	</div>
 	<div class="comptetion-level-type">
+		<label>Which best describes the levels your club has?</label>
 		<div class="comp-levels-h"></div>
 	</div>
 	
@@ -17,7 +19,9 @@
 		<a href="javascript: void(0);" class="verify-address-h">VERIFY ADDRESS</a>		
 	</div>
 	
-	<div class="clear">
+	<div class="location-map-h"></div>
+	
+	<div class="clear location-buttons">
 		<a href="javascript: void(0);" class="common-btn common-btn-direction cancel-h" title="cancel">Cancel</a>
 		<a href="javascript: void(0);" class="common-btn common-btn-direction finish-h" title="finish">Finish</a>
 	</div>
