--- a/html/usercontrols/add-club/add-club.css
+++ b/html/usercontrols/add-club/add-club.css
@@ -1,5 +1,5 @@
 .club-season-profile, .comptetion-level-type {
-	height: 50px;
+	height: 80px;
 }
 
 .address-verified {
@@ -13,4 +13,15 @@
 .address-error{
 	color: red;
 float: right;
+}
+
+.add-club-school-outer {
+	max-height: 500px;
+	height: 500px;
+	overflow-y: auto;
+	overflow-x: hidden; 
+}
+
+.location-buttons {
+	margin-top: 30px;
 }
