APPLIED DESIGNS ON DROPDOWNS IN ADD TAG USER CONTROL

--- a/html/usercontrols/tag/templates/layout.html
+++ b/html/usercontrols/tag/templates/layout.html
@@ -5,8 +5,8 @@
 		Select Sport:
 	</div>
 	<div class="row-fluid">
-		
-		<select class="ddl-tag-sports_h"></select>
+		<span class="span-ddl-sports-tag_h"></span>
+		<!-- <select class="ddl-tag-sports_h" style=></select> -->
 		<span class="alert alert-danger displayNone field-message"></span> 
 	<br/>
 	<button class="btn btn-primary btn-tag-sport_h displayNone">Done</button>
@@ -58,7 +58,8 @@
 	
 	<div class="section-tag-game_h displayNone">
 		<strong>Tag a Game : </strong>
-		<select class="ddl-tag-game_h"></select>
+		<span class="span-ddl-games-tag_h"></span>
+		<!-- <select class="ddl-tag-game_h"></select> -->
 		<br/>
 		<span class="alert alert-danger displayNone field-message"></span>
 		<br/>
