commit except Logout

--- a/html/pages/chrome/templates/header.html
+++ b/html/pages/chrome/templates/header.html
@@ -25,7 +25,9 @@
                     {{#nav}}
                         <li><a href="{{link}}">{{page}}</a></li>
                     {{/nav}}
+                    <li><a href="{{fbreg_url}}">{{fbreg_label}}</a></li>
                     <li><a href="{{logout_url}}">{{logout_label}}</a></li>
+
                 </ul>
             </div>
         {{/authorized}}    
