enabled logout api

--- a/html/pages/chrome/templates/header.html
+++ b/html/pages/chrome/templates/header.html
@@ -26,7 +26,7 @@
                         <li><a href="{{link}}">{{page}}</a></li>
                     {{/nav}}
                     <li><a href="{{fbreg_url}}">{{fbreg_label}}</a></li>
-                    <li><a href="{{logout_url}}">{{logout_label}}</a></li>
+                    <li><a href='null' id="logoutId">{{logout_label}}</a></li>
 
                 </ul>
             </div>
