--- a/html/usercontrols/photo-player/templates/player.html
+++ b/html/usercontrols/photo-player/templates/player.html
@@ -16,7 +16,7 @@
 			</a>	
 		</div>
 	</div>
-
+	<div id="video_container" class="hidden"><span>Loading Video...</span></div>
 	<div class="loading_image"><img src="" class="photo-player-main-image large-image-h" /></div>
 
 	<div class="thumbs-outer">
