--- a/html/usercontrols/photo-player/templates/player.html
+++ b/html/usercontrols/photo-player/templates/player.html
@@ -21,7 +21,9 @@
 
 	<div class="thumbs-outer">
 		<div class="thumbs-inner">
+			<div class="direction leftmove"></div>
 			<ul class="images-list thumb-image-list-h"></ul>
+			<div class="direction rightmove"></div>
 		</div>
 	</div>
 
