--- a/application/templates/index.mustache
+++ b/application/templates/index.mustache
@@ -7,34 +7,13 @@
     <meta charset="utf-8">
     <title>{{title}}</title>
     <meta name="viewport" content="width=device-width">
-    <meta name="description" content="Todos application built with Backbone.js and RequireJS using the Vertebrae framework by HauteLook">
     <link rel="shortcut icon" href="images/favicon.ico">
     <link rel="apple-touch-icon" href="images/apple-touch-icon-iphone.png" />
     <link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-ipad.png" />
     <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-iphone4.png" />
     <link rel="stylesheet" href="/css/normalize.css">
 	<link rel="stylesheet" href="/css/fonts.css">
+	<script>var base_url = '{{base_url}}';var testpath = false;</script>
 	<script src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
     <script data-main="{{base_url}}main" src="{{base_url}}vendor/require.js"></script>
-    <script>
-        var base_url = '{{base_url}}';
-        var testpath = '{{base_url}}{{testpath}}';
-        var testpath = false;
-       // require(['facade', 'application', 'utils'], function (facade, App, utils) {
-         //   var $ = facade.$,
-           //     Backbone = facade.Backbone,
-             //   debug = utils.debug;
-
-          //  $(function () { // doc ready
-           //     var app;
-
-                // run the application, it all starts here.
-               // app = new App();
-                //Backbone.history.start({pushState: true});
-                //debug.log("app initialized.");
-            //});
-        //});
-    </script>
-</head>
-<body></body>
-</html>
+</head><body></body></html>
