--- a/html/pages/imageup/imageup.css
+++ b/html/pages/imageup/imageup.css
@@ -4,10 +4,9 @@
 }
 
 .imageholder {
-    border: 3px dashed #ccc;
+    border: 3px dashed #1B9FAE;
     margin: 10px;
     padding:30px 0 30px 0;
-
     vertical-align: middle;
     color: #CCCCCC;
     text-align: center;
@@ -31,7 +30,21 @@
 .fileuploader {
     margin: 10px 5px 0 10px;
 }
+.tag_select_all{
+	float:left;
+	color : #999999;
+	border : 1px solid #999999;
+}
+.m_top_10{
+	margin-top:10px;
+}
 
+.tag_select_all span{
+	float: left;
+    margin-bottom: 10px;
+    text-align: center;
+    width: 100%;
+}
 .previewprogress {
     margin: -63px 0 0 0px;
 }
@@ -118,4 +131,8 @@ height: 700px;
 }
 .errormsg{
 color: red;
+}
+
+#imgpreview .selected{
+	border:2px solid #954121;
 }
