--- a/html/pages/imageup/templates/select_all.html
+++ b/html/pages/imageup/templates/select_all.html
@@ -1,7 +1,8 @@
-<div class="well well-large div_select_all">
-	<span >SELECT IMAGES TO TAG A TEAM , PLAYER OR GAME</span>
+<div class="well-large div_select_all">
+	<span >SELECT IMAGES TO TAG A TEAM, PLAYER OR GAME</span>
 	<div class="clear"></div>
 	<span style="text-align:center" >OR</span>
 	<div class="clear"></div>
 	<span><a href="javascript:void(0)" id="btn_select_all_h">SELECT ALL</a></span>
+	<div class="clear"></div>
 </div>
