--- a/html/pages/imageup/templates/uploader.html
+++ b/html/pages/imageup/templates/uploader.html
@@ -1,15 +1,16 @@
-<div id="main-content-img">
-	<div id="imageholder" class="imageholder">Drag & Drop</div>
+<div id="main-content-img" class="imageholder">
+	<div id="imageholder" class="textcenter">Drag & Drop Here</div>
+	<div class="textcenter">OR</div>
 	<div align="center"><input type="file" id="image_file" class="files" name="image_file[]" multiple=""></div>
 	<div class="modal-footer">
 		<button class="btn fileuploader btn-primary" id="imageup" type="button">Upload and Finish</button>
 	</div>
 </div>
-<div>
+<div class="floatLeft m_top_10">
 		<div id="image-tagging" class="displayNone">
 			
 		</div>
-		<div id="select-allup">
+		<div id="select-allup" class="tag_select_all">
 			
 		</div>	
 </div>
