--- a/html/packages/game-schedules/templates/schedule-list.html
+++ b/html/packages/game-schedules/templates/schedule-list.html
@@ -1,4 +1,5 @@
 {{#data}}
+<a href="javascript: void(0);" title="add game" class="add-game-h">Click here to Add Game.</a>
 <div class="select-team">
 	<div class="game-box-outer">
 		<ul class="schedule-list-h">
