--- a/html/css/app.css
+++ b/html/css/app.css
@@ -1176,3 +1176,11 @@ margin-top:10px;
 	margin-top: 30%;
 }
 
+.image-drop-area {
+	border: 1px dotted #000;
+	width: 200px;
+	height: 200px;
+	background: #CCCCCC;
+	float: right;
+}
+
