--- a/html/pages/imageup/templates/select_all.html
+++ b/html/pages/imageup/templates/select_all.html
@@ -1,8 +1,8 @@
 <div class="well-large div_select_all">
-	<span >SELECT IMAGES TO TAG A TEAM, PLAYER OR GAME</span>
+	<div class="text-center m_top_20 bigger">SELECT IMAGES TO TAG A TEAM, PLAYER OR GAME</div>
 	<div class="clear"></div>
-	<span style="text-align:center" >OR</span>
+	<div class="text-center m_top_20 bigger" >OR</div>
 	<div class="clear"></div>
-	<span><a href="javascript:void(0)" id="btn_select_all_h">SELECT ALL</a></span>
+	<div class="text-center m_top_20 bigger"><a href="javascript:void(0)" id="btn_select_all_h">SELECT ALL</a></div>
 	<div class="clear"></div>
 </div>
