--- a/html/pages/imageup/templates/uploader.html
+++ b/html/pages/imageup/templates/uploader.html
@@ -1,12 +1,12 @@
 <div id="main-content-img" class="imageholder">
-	<div id="imageholder" class="textcenter">Drag & Drop Here</div>
-	<div class="textcenter">OR</div>
-	<div align="center"><input type="file" id="image_file" class="files" name="image_file[]" multiple=""></div>
-	<div class="modal-footer">
+	<div id="imageholder" class="textcenter m_top_50 bigger">Drag & Drop Here</div>
+	<div class="textcenter m_top_50 bigger">OR</div>
+	<div align="center" class="m_top_50"><input type="file" id="image_file" class="files" name="image_file[]" multiple=""></div>
+	<div class="modal-footer m_top_50">
 		<button class="btn fileuploader btn-primary" id="imageup" type="button">Upload and Finish</button>
 	</div>
 </div>
-<div class="floatLeft m_top_10">
+<div id="main-content-tag-section" class="imageholder floatLeft m_top_2 displayNone">
 		<div id="image-tagging" class="displayNone">
 			
 		</div>
