--- a/html_build/css/app.css
+++ b/html_build/css/app.css
@@ -685,8 +685,10 @@ span.team-label{
 	display: inline-block;
 }
 #sports-info {
-	margin-top: 30px;
 	margin-left: 0;
+}
+#sports-info ul#sport-list{
+    margin:0 0 0 0;
 }
 .modal-body {
 	width: 100%;
@@ -916,9 +918,6 @@ margin-top:10px;
 #regcontainer *{
     font-family: "HelveticaNeue", "Helvetica";
 }
-#imgpreview .selected{
-	border:2px solid #954121;
-}
 .search-result-outer {
 }
 .home-page-arrow {
@@ -931,4 +930,68 @@ margin-top:10px;
 .right-arrow-page {
 	right: 0;
 	margin-top: 30%;
+}
+.m_top_50{margin-top:50px;
+	}
+.m_top_20{
+	 margin-top: 20px;
+}
+.m_bottom_10{
+	margin-bottom: 10px;
+}
+.container_batch_tag{
+	text-align: left;
+	
+}
+.container_batch_tag h4{
+	font-size: 25px;
+	color : #888888;
+}
+.container_batch_tag .field-message{
+	background-color: rgba(0, 0, 0, 0);
+    border: medium none;
+    color: #77011C;
+    float: left;
+    font-size: 12px;
+    font-style: italic;
+    font-weight: normal;
+    margin-bottom: 4px;
+    margin-top: 4px;
+    width: 100%;
+}
+.container_batch_tag .margin{margin:4px 0;}
+.container_batch_tag input[type="text"]{margin:4px 0;}
+.container_batch_tag .section_inner{margin:5px 0;}
+.container_batch_tag .section_outer{margin:5px 0;}
+.bigger{font-size : 20px;}
+.image-drop-area {
+	border: 1px dotted #000;
+	width: 200px;
+	height: 200px;
+	background: #CCCCCC;
+	float: right;
+}
+.circle
+{
+    margin:-190px 30px 30px 30px;
+    width:130px;
+    height:130px;
+    border-radius:50%;
+    border:15px solid #fff;
+    font-size:50px;
+    background-color:transparent;
+    opacity:.2;
+}
+.circle:hover{ opacity:.4; }
+.play{
+    width: 0px;
+    height: 0px;
+    border-style: solid;
+    border-width: 50px 0 50px 86.6px;
+    border-color: transparent transparent transparent #fff;
+    position: relative;
+    left: 50%;
+    top: 50%;
+    margin-top: -51px;
+    margin-left: -32px;
 }
