--- a/html_build/packages/media/templates/image-list.html
+++ b/html_build/packages/media/templates/image-list.html
@@ -1,3 +1,8 @@
 <ul class="image-list">
 </ul>
+<!--<div class="image-drop-area-outer">
+	<div class="image-drop-area" id="image-place-holder">
+		Drop Image Here
+	</div>
+</div>-->
 <div class="clear"><a href="javascript: void(0);" class="see-more-h">See more</a></div>
