--- a/html_build/pages/home/templates/menu.html
+++ b/html_build/pages/home/templates/menu.html
@@ -3,12 +3,15 @@
 	</div>	
 <div class="menu-outer-h">
 <div id="views" class="menu span2">
-	<a href="javascript:void(0)" class="menu-link-h view-link-h"> <span class="option-heading-h">VIEWS</span> <span class="caret"></span></a>
+	<a href="javascript:void(0)" class="menu-link-h view-link-h"><span class="option-heading-h">SORT</span>
+		<div class="caret-large-container">
+			<span class="caret-large"></span>
+		</div></a>
 	<div class="dd menu-detail-h reset-view-area-h view-options-h">
 		<a href="javascript: void(0);" class="btn views-reset-btn-h">Reset</a>
 		
 		<div class="dropdown">
-			<a href="javascript:void(0)"> Browse <span class="caret"></span></a>
+			<span> SORT BY</span>
 			<div class="clearfix"></div>
 			<ul class="dropdown-menu" style="display: block; position: relative; margin-bottom:15px;">
 				{{#views.browse}}
@@ -18,7 +21,7 @@
 		</div>
 		<br />
 		<div class="clearfix">
-			<a href="javascript:void(0)"> Time <span class="caret"></span></a>
+			<span>TIME FRAME</span>
 			<div class="clearfix"></div>
 			<ul class="dropdown-menu" style="display: block; position: relative;">
 				{{#views.time}}
@@ -30,7 +33,11 @@
 </div>
 
 <div id="sport" class="menu span2">
-	<a href="javascript:void(0)" class="menu-link-h sport-link-h"> <span class="option-heading-h">SPORT</span> <span class="caret"></span>
+	<a href="javascript:void(0)" class="menu-link-h sport-link-h">
+		<span class="option-heading-h">SPORT</span>
+		<div class="caret-large-container">
+			<span class="caret-large"></span>
+		</div>
 	</a>
 	<div class="dd menu-detail-h reset-sport-area-h sports-option-h">
 		<a href="javascript: void(0);" class="btn sport-reset-btn-h">Reset</a>
@@ -49,23 +56,25 @@
 	</div>
 </div>
 <div id="location" class="menu span2">
-	<a href="javascript:void(0)"  class="menu-link-h location-link-h"> <span class="option-heading-h">LOCATION</span> <span class="caret"></span></a>
+	<a href="javascript:void(0)"  class="menu-link-h location-link-h"> <span class="option-heading-h">PLACE</span>
+		<div class="caret-large-container">
+			<span class="caret-large"></span>
+		</div></a>
 	<div class="dd menu-detail-h reset-location-area-h">
 		<a href="javascript: void(0);" class="btn location-reset-btn-h">Reset</a>
 		<!--div class="state"></div-->
 		<div class="city"></div>
 	</div>
 </div>
-<div class="span5">
-	<div class="pull-left m-r-10">SEARCH</div>
-	<div class="pull-left">
-		<input type="text" id="search" />
-	</div>
-	<div class="pull-left">
+	<div class="pull-right type-icons">
 		<a id="video" class="searchBtn" data-number="0" href="javascript:void(0)"><i class="icon-facetime-video"></i></a>
 		<a id="image" class="searchBtn" data-number="1" href="javascript:void(0)"><i class="icon-picture"></i></a>
 		<a id="user" class="searchBtn" data-number="2" href="javascript:void(0)"><i class="icon-user"></i></a>
 		<a id="game" class="searchBtn" data-number="3" href="javascript:void(0)"><i class="icon-user"></i></a>
 	</div>
-</div>
+	<div class="pull-right search-box">
+		<input type="text" id="search" placeholder="SEARCH" />
+	</div>
+
+
 </div>
