--- a/html_build/pages/signup/templates/layout.html
+++ b/html_build/pages/signup/templates/layout.html
@@ -19,7 +19,7 @@
 		<h3 id="label">Registration</h3>
 	</div>
 
-	<div id="main-content-reg"></div>
+	<div id="main-contentreg"></div>
 
 	<div class="modal-body">
 		<div id="errormsg"></div>
