--- a/html_build/usercontrols/addgame/templates/layout.html
+++ b/html_build/usercontrols/addgame/templates/layout.html
@@ -81,13 +81,13 @@
 		<div class="clear"></div>
 		Select Team 2 :
 			<div class="clear"></div>
-			<span class="span_ddl_team_h span_ddl_team_two_h"></span>
+			<!-- <span class="span_ddl_team_h span_ddl_team_two_h"></span> -->
 		<!-- <select class="ddl-game-userteams_h"></select> -->
-		<a href="javascript:void(0)" class="btn-new-team-game_h">Team not listed ?</a>
+		<!-- <a href="javascript:void(0)" class="btn-new-team-game_h">Team not listed ?</a> -->
 		<div class="section-new-team_h">
 			<!-- <input type="text" class="txt-game-state_h" placeholder="Enter State" />
 			<input type="text" class="txt-game-city_h displayNone" placeholder="Enter City" /> -->
-			<input type="text"class="txt-game-team_h displayNone" placeholder="Enter Team" />
+			<input type="text"class="txt-game-team_h" placeholder="Enter Team" />
 			<span class="indicator_h"></span>
 		</div>
 			<div class="clear"></div>
