--- a/html_build/usercontrols/photo-player/photoPlayer.css
+++ b/html_build/usercontrols/photo-player/photoPlayer.css
@@ -5,6 +5,7 @@
     left:5% !important;
     margin: 0 !important;
     border-radius: 0; -webkit-border-radius: 0; -moz-border-radius: 0;
+    padding: 0;
 }
 .photo-frame-model .modal-body {
     height: 100%;
@@ -197,4 +198,20 @@ div.right-arrow-container > img{
 .game-score {
 	float: right;
 	width: 30%;
+}
+.photo-player-arrow {
+	position: absolute;
+	top: 40%;
+}
+#video_container{
+    width: 100%;
+    height: 100%;
+    text-align: left;
+    z-index: 9999;
+}
+.hidden{
+    display: none;
+}
+#jw_container{
+    z-index: 9999;
 }
