--- a/html/packages/media/templates/image-list.html
+++ b/html/packages/media/templates/image-list.html
@@ -3,7 +3,9 @@
 {{#target}}
 <div class="image-drop-area-outer">
 	<div class="image-drop-area" id="image-place-holder">
-		Drop Image Here
+		<div class="drop-text">DROP PHOTOS HERE</div>
+		<div>OR CLICK TO UPLOAD</div>
+		
 	</div>
 </div>
 {{/target}}
