The finish button seems redundant and it took me a couple uploads to realize that I needed to click it. Let's just update it live when the user clicks done instead of needing to click both "done" and "finish". We need to have a consistent way to format these results. {8:[],1:[426448,526448],5:[2128]}

--- a/html/usercontrols/tag/templates/layout.html
+++ b/html/usercontrols/tag/templates/layout.html
@@ -66,7 +66,7 @@
 		<label class="lbl-tag-players-name_h"></label>
 		<span class="displayNone"><button class="btn btn-tag-edit-players-team_h displayNone">Edit</button></span>
 	</div>
-	
+	<div class="clear"></div>
 	<div class="section-tag-game_h displayNone section_outer">
 		<strong>Tag a Game : </strong>
 		<div class="clear"></div>
@@ -93,7 +93,7 @@
 		<span class="displayNone field-message"></span>
 	</div>
 	<div class="clear"></div>
-	<div class="section_outer">
+	<!-- <div class="section_outer">
 		<button class="btn btn-primary btn-tag-Finish_h displayNone">Finish</button>
-	</div>
+	</div> -->
 </div>
