--- a/html_build/usercontrols/photo-player/photoPlayer.css
+++ b/html_build/usercontrols/photo-player/photoPlayer.css
@@ -89,7 +89,7 @@ div.right-arrow-container{
 div.left-arrow-container{
     left:0px;
 }
-div.right-arrow-container > img, div.left-arrow-container > img{
+div.right-arrow-container > img, div.left-arrow-container > img {
     display: block;
     position: relative;
     top:40%;
@@ -104,10 +104,9 @@ div.right-arrow-container > img{
     float: right;
 }
 .images-list {
-    
-    
+	padding: 0px 10px;
+	margin: 35px 0 0 0;
     float: left;
-    
 }
 .thumbs-outer {
     z-index: 1056;
