--- a/html_build/css/app.css
+++ b/html_build/css/app.css
@@ -918,6 +918,9 @@ margin-top:10px;
 #regcontainer *{
     font-family: "HelveticaNeue", "Helvetica";
 }
+#imgpreview .selected{
+	border:2px solid #954121;
+}
 .search-result-outer {
 }
 .home-page-arrow {
@@ -961,15 +964,17 @@ margin-top:10px;
 }
 .container_batch_tag .margin{margin:4px 0;}
 .container_batch_tag input[type="text"]{margin:4px 0;}
-.container_batch_tag .section_inner{margin:5px 0;}
-.container_batch_tag .section_outer{margin:5px 0;}
+.container_batch_tag .section_inner{margin:5px 0;float: left;}
+.container_batch_tag .section_outer{margin:5px 0;float: left;}
 .bigger{font-size : 20px;}
 .image-drop-area {
-	border: 1px dotted #000;
+	border: 2px dashed #000;
 	width: 200px;
-	height: 200px;
+	text-align: center;
+	height: 220px;
 	background: #CCCCCC;
 	float: right;
+	margin-right: 20px;
 }
 .circle
 {
@@ -994,4 +999,8 @@ margin-top:10px;
     top: 50%;
     margin-top: -51px;
     margin-left: -32px;
+}
+.container_batch_tag .dropdown{height:30px;margin:5px 0}
+.image-drop-area .drop-text {
+	margin-top: 25%;
 }
