--- a/html_build/pages/game/templates/header.html
+++ b/html_build/pages/game/templates/header.html
@@ -5,7 +5,7 @@
 		<!--div class="sports-h"></div-->
 		<div class="game-general">
 			<div class="stretch"></div>
-			{{#shared.sport}}<span>{{shared.sport}}</span>{{/shared.sport}}
+			{{#shared.sport}}<span class="sport-h" data-id="{{sports_id}}">{{shared.sport}}</span>{{/shared.sport}}
 			{{#shared.complevel}}<span>{{shared.complevel}}</span>{{/shared.complevel}}
 			{{#shared.season}}<span>{{shared.season}}</span>{{/shared.season}}
 		</div>
