--- a/html_build/usercontrols/tag/templates/layout.html
+++ b/html_build/usercontrols/tag/templates/layout.html
@@ -5,7 +5,7 @@
 		Select Sport:
 	</div>
 	<div class="row-fluid section_inner">
-		<span class="span-ddl-sports-tag_h"></span>
+		<span class="span-ddl-sports-tag_h dropdown"></span>
 		<div class="clear"></div>
 		<!-- <select class="ddl-tag-sports_h" style=></select> -->
 		<span class="displayNone field-message"></span> 
@@ -16,8 +16,10 @@
 	</div>
 	<div class="div-tag-list_h section_outer">		
 	<div class="section-sports_h displayNone">
-		<label class="lbl-tag-sport-name_h"></label><span>
-			<button class="btn btn-tag-edit-sport_h">Edit</button></span>
+		<label class="lbl-tag-sport-name_h bigger"></label>
+		<!-- <div class="clear"></div> -->
+		<span>
+			<a href="javascript:void(0)" class="btn-tag-edit-sport_h">Edit</a></span>
 	</div>
 	
 	<div class="section-team_h displayNone section_inner">
@@ -64,11 +66,11 @@
 		<label class="lbl-tag-players-name_h"></label>
 		<span class="displayNone"><button class="btn btn-tag-edit-players-team_h displayNone">Edit</button></span>
 	</div>
-	
+	<div class="clear"></div>
 	<div class="section-tag-game_h displayNone section_outer">
 		<strong>Tag a Game : </strong>
 		<div class="clear"></div>
-		<span class="span-ddl-games-tag_h"></span>
+		<span class="span-ddl-games-tag_h  dropdown"></span>
 		<!-- <select class="ddl-tag-game_h"></select> -->
 		<div class="clear"></div>
 		<span class="displayNone field-message"></span>
@@ -91,7 +93,7 @@
 		<span class="displayNone field-message"></span>
 	</div>
 	<div class="clear"></div>
-	<div class="section_outer">
+	<!-- <div class="section_outer">
 		<button class="btn btn-primary btn-tag-Finish_h displayNone">Finish</button>
-	</div>
+	</div> -->
 </div>
